# tribase

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml
cmake/: FetchDependencies.cmake
effect/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
instrument/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
kick/: CMakeLists.txt
kick/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/dsp/: LookaheadDetector.cpp  LookaheadDetector.h
shared/ui/: TriBaseStyle.h  XenoLookAndFeel.cpp  XenoLookAndFeel.h
